--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 120
 
-[*.md]
+[*.{md,mdx}]
 trim_trailing_whitespace = false
 max_line_length = off
