--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "documentations",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Fanatic Developer Team",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
